# emailreader

./: .gitignore  pyproject.toml  requirements.txt  setup.sh
docs/superpowers/plans/: 2026-05-24-gmail-to-pdf-pipeline.md
docs/superpowers/specs/: 2026-05-24-gmail-to-pdf-design.md
email_reader/: config.py  db.py  gmail.py  main.py  notifier.py  pdf.py  run_logger.py  url_detector.py
systemd/: email-reader.service  email-reader.timer
tests/: conftest.py  test_config.py  test_db.py  test_gmail.py  test_main.py  test_notifier.py  test_pdf.py  test_run_logger.py  test_url_detector.py
