[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "email-reader"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.100",
    "google-auth>=2.20",
    "psycopg2-binary>=2.9",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "pytz>=2023.3",
    "playwright>=1.40",
]

[project.scripts]
email-reader = "email_reader.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
